--- a/sass/_filterbar.scss
+++ b/sass/_filterbar.scss
@@ -1,6 +1,29 @@
 .FilterBar {
   width: 100%;
-  height: 100px;
+  min-height: 100px;
   background: white;
   border-radius: $radius;
+
+  &-options {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    padding: 1rem;
+  }
+
+  &-option {
+    background: white;
+    border: 1px solid $purp;
+    border-radius: $radius;
+    padding: 0.5rem 1rem;
+    margin: 0.5rem;
+    cursor: pointer;
+    &.active,
+    &:hover {
+      background: $purp;
+      color: white;
+    }
+  }
 }
