--- a/sass/_songs.scss
+++ b/sass/_songs.scss
@@ -4,7 +4,8 @@
   display: flex;
   flex-direction: column;
   &-header {
-    // padding: 2rem 1rem 0.5rem 1rem;
+    border-radius: $radius;
+    background: grey;
   }
 }
 
@@ -36,21 +37,25 @@
     flex: 1 1 25%;
   }
 
+  &-remove {
+    flex-basis: 5%;
+  }
+
   &-details {
     height: 50px;
     background: white;
     width: 100%;
   }
 
-  // &:first-child {
-  //   margin-top: 1rem;
-  //   border-top-left-radius: $radius;
-  //   border-top-right-radius: $radius;
-  // }
+  &:first-child {
+    margin-top: 1rem;
+    border-top-left-radius: $radius;
+    border-top-right-radius: $radius;
+  }
 
-  // &:last-child {
-  //   border-bottom: none;
-  //   border-bottom-left-radius: $radius;
-  //   border-bottom-right-radius: $radius;
-  // }
+  &:last-child {
+    border-bottom: none;
+    border-bottom-left-radius: $radius;
+    border-bottom-right-radius: $radius;
+  }
 }
