--- a/sass/_songs.scss
+++ b/sass/_songs.scss
@@ -11,6 +11,8 @@
 
 .Song {
   width: 100%;
+  height: 40px;
+  text-overflow: ellipsis;
   display: flex;
   background: transparentize(black, 0.2);
   border-bottom: 0.5px solid lightgrey;
@@ -18,6 +20,7 @@
   align-items: center;
   justify-content: space-around;
   flex-wrap: wrap;
+  overflow: hidden;
 
   &:hover {
     background: transparentize(black, 0.5);
@@ -35,6 +38,7 @@
     padding: 0.5rem;
     text-align: left;
     flex: 1 1 25%;
+    overflow: scroll;
   }
 
   &-remove {
