--- a/sass/_table.scss
+++ b/sass/_table.scss
@@ -12,7 +12,7 @@ $thickBorder: 3px solid lightgrey;
     max-width: 100%;
     border-bottom: $border;
     background: white;
-    div {
+    .Table-item {
       flex: 1 1 100%;
       padding: 0.1rem 1rem;
       height: 100%;
@@ -25,9 +25,19 @@ $thickBorder: 3px solid lightgrey;
   &-row--header {
     border-bottom: $thickBorder;
     background: #eee;
-    div:hover {
+    .Table-item:hover {
       background: darkgrey;
       cursor: pointer;
+    }
+    .Table-item.asc {
+      &:after {
+        content: '^';
+      }
+    }
+    .Table-item.desc {
+      &:after {
+        content: '\\/';
+      }
     }
   }
 }
