--- a/sass/index.scss
+++ b/sass/index.scss
@@ -18,10 +18,7 @@ body {
 @import 'nav';
 // Components
 @import 'input';
-// @import 'avatar';
-// @import 'songs';
 @import 'table';
-// @import 'sorter';
 
 // NEW
 
@@ -33,3 +30,8 @@ body {
 @import 'layout';
 @import 'filter';
 @import 'viewer';
+
+body,
+html {
+  height: auto;
+}
