pane fix up got rid of neat

--- a/sass/_filter.scss
+++ b/sass/_filter.scss
@@ -15,6 +15,7 @@
         margin-bottom: 0.5rem;
         position: relative;
         display: flex;
+        justify-content: space-between;
 
         span {
             padding-right: 1rem;
@@ -45,6 +46,6 @@
         padding: 0.4rem 0.9rem;
         font-size: 10px;
         border-radius: 24px;
-        
+
     }
 }
