--- a/sass/_table.scss
+++ b/sass/_table.scss
@@ -1,17 +1,55 @@
 $border: 1px solid lightgrey;
 $thickBorder: 3px solid lightgrey;
 .Table {
-  border: $border;
-  width: 80vw;
-  margin: auto;
-  margin-top: 1rem;
+  $rowHeight: 40px;
+  $headerHeight: $rowHeight;
+  $footerHeight: $rowHeight;
+
+  width: 100%;
+  height: 100%;
+  overflow-y: scroll;
+  position: relative;
+
+  &-header {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: $headerHeight;
+    z-index: 9999;
+  }
+
+  &-items {
+    height: calc(100% - #{$headerHeight});
+    margin-top: $headerHeight;
+    overflow: scroll;
+  }
+
+  &-footer {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: $footerHeight;
+    background: white;
+    border-top: 1px solid lightgrey;
+    overflow: hidden;
+  }
+
   &-row {
     display: flex;
     position: relative;
-    height: 40px;
+    height: $rowHeight;
     max-width: 100%;
     border-bottom: $border;
     background: white;
+
+    &:last-child {
+      // so the footer doesnt hide the last eleemnt
+      margin-bottom: $footerHeight;
+    }
+
+
     .Table-item {
       flex: 1 1 100%;
       padding: 0.1rem 1rem;
@@ -37,6 +75,43 @@ $thickBorder: 3px solid lightgrey;
     .Table-item.desc {
       &:after {
         content: '\\/';
+      }
+    }
+  }
+}
+
+.Pagination {
+  height: 100%;
+
+  ul {
+    height: 100%;
+    display: flex;
+
+    .paginator {
+        padding: 0 1rem;
+    }
+
+    li {
+      display: inline-block;
+      list-style: none;
+      height: 100%;
+      text-align: center;
+      padding: 0 0.8rem;
+      border-right: 1px solid lightgrey;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex: 1;
+      cursor: pointer;
+
+      &:hover,
+      &:focus {
+        background: royalblue;
+        color: white;
+      }
+
+      &.active {
+        background: lightgrey;
       }
     }
   }
