--- a/sass/_nav.scss
+++ b/sass/_nav.scss
@@ -6,5 +6,8 @@ $navBarHeight: 80px;
     right: 0;
     top: 0;
     height: $navBarHeight;
-    background: rgba(255, 255, 255, 0.8);
+    background: rgba(255, 255, 255, 0.8);    
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
