--- a/sass/_loader.scss
+++ b/sass/_loader.scss
@@ -1,31 +1,19 @@
 
 .Loader {
-      height: 50px;
-    /* width: 100%; */
-    /* line-height: 50px; */
-    text-align: center;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    /* font-family: helvetica, arial, sans-serif; */
-    /* text-transform: uppercase; */
-    /* font-weight: 900; */
-    color: red;
-    /* letter-spacing: 0.2em; */
-    z-index: 999999999;
-  
-  &::before, &::after {
-        content: "";
-    display: block;
-    /* width: 15px; */
-    /* height: 15px; */
-    background: red;
-    position: absolute; 
-    animation: load .7s infinite alternate ease-in-out;
-    height: 30px;
-  }
-  
+  position: fixed;
+    z-index: 99999999;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    top: 0;
+    background: rgba(0, 0, 0, 0.4);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 3rem;
+    text-transform: uppercase;
+    flex-direction: column;
+    
   &::before {
     top: 0;
   }
@@ -35,10 +23,46 @@
   }
 }
 
-@keyframes load {
-  0% { left: 0; width: 0% }
-  49% { left: 0; right: 0; }
-  50% { width: 100%;}
-  51% { left: auto; right: 0; }
-  100% {  width: 0%}
+
+// Here is where the magic happens
+
+$offset: 187;
+$duration: 1.4s;
+
+.spinner {
+  animation: rotator $duration linear infinite;
+}
+
+@keyframes rotator {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(270deg); }
+}
+
+.path {
+  stroke-dasharray: $offset;
+  stroke-dashoffset: 0;
+  transform-origin: center;
+  animation:
+    dash $duration ease-in-out infinite, 
+    colors ($duration*4) ease-in-out infinite;
+}
+
+@keyframes colors {
+	0% { stroke: #4285F4; }
+	25% { stroke: #DE3E35; }
+	50% { stroke: #F7C223; }
+	75% { stroke: #1B9A59; }
+  100% { stroke: #4285F4; }
+}
+
+@keyframes dash {
+ 0% { stroke-dashoffset: $offset; }
+ 50% {
+   stroke-dashoffset: $offset/4;
+   transform:rotate(135deg);
+ }
+ 100% {
+   stroke-dashoffset: $offset;
+   transform:rotate(450deg);
+ }
 }
